Order archive improvments